--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -3,15 +3,16 @@
 
 
 html, body{
-  height: 100%;
+  /* height: 100%; */
   background-color: black;
   font-family: 'Press Start 2P';
 }
 body{
+  /* border: 2px solid green; */
   display: flex;
+  align-items: center;
   width: 100%;
   min-width: 900px;
-  /* border: 2px solid red; */
   flex-direction: column;
   padding: 20px 50px;
   position: relative;
@@ -36,9 +37,19 @@ li, p{
   color: lightgrey;
 }
 main-menu{
-  height: 80%;
+  /* background-color: pink; */
+  position: relative;
+  height: 600px;
+  width: 900px;
   display: flex;
   font-size: 2rem;
+}
+canvas{
+  /* background-color: pink; */
+  position: absolute;
+  height: 600px;
+  width: 900px;
+  border: 6px solid white;
 }
 left-menu, right-menu{
   display: flex;
@@ -59,6 +70,7 @@ left-menu .menu-option{
   padding-left: 40px;
 }
 right-menu .menu-option{
+  z-index: 22;
   padding-right: 40px;
 }
 .menu-option{
@@ -74,11 +86,12 @@ button{
 }
 left-menu .menu-option:hover{
   padding-left: 20px;
-  border-left: 6px solid white;
+  border-left: 11px solid white;
 }
 right-menu .menu-option:hover{
+  /* background-color: red; */
   padding-right: 20px;
-  border-right: 6px solid white;
+  border-right: 11px solid white;
 }
 vertical-line{
   position:absolute;
