--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -1,182 +1,161 @@
-
+/* Main CSS configurations */
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-/* biggest options: */
-:root{
-  --game-height: 721px;
-  --game-width: 1334px;
+:root {
+  --top-bottom-height: 10vh;
+  --game-height: calc(100vh - var(--top-bottom-height)*2);
+  --game-width: calc(var(--game-height) * 16 / 9);
+  --font-size: 3vh; /* Use viewport width for responsive font size */
   --background-color: black;
-  --color: rgb(201, 201, 201);
-  --font-size: 16px;
-  --body-fit: 100%;
-}
-/* 
-gameplay:
-1334x721 
-*/
-/* 
-native:
-1280x720 
-*/
-@media (width <= 1334px)
-{
-  :root{
-    --game-width: 1200px;
-  }
-  body{
-    /* border: 2px solid yellow; */
-  }
-}
-@media (height <= 800px)
-{
-  :root{
-    --game-height: 630px;
-  }
-  body{
-    /* border: 2px solid white; */
-  }
+  --highlight-color: rgb(255, 255, 255);
+  --color: rgb(172, 172, 172);
 }
 
-@media (height <= 700px) or (width <= 1200px)
-{
-  :root{
-    --game-height: 600px;
-    --game-width: 850px;
-    --body-fit: 100%;
-  }
-  body{
-    /* border: 2px solid orange; */
-  }
-}
-@media (height <= 700px)
-{
-  :root{
-    --game-height: 500px;
-    --body-fit: 100%;
-  }
-  body{
-    /* border: 2px solid purple; */
-  }
-}
-
-
-@media (height <= 600px) or (width <= 900px)
-{
-  :root{
-    --game-height: 400px;
-    --game-width: 600px;
-    --font-size: 11px;
-    --body-fit: none;
-  }
-  body{
-    /* border: 3px solid pink; */
-    height: none;
-  }
-}
-
-
-html, body{
-  height: var(--body-fit);
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
   background-color: var(--background-color);
   font-family: 'Press Start 2P';
-  font-size: var(--font-size);
-}
-body{
-  /* border: 2px solid green; */
   display: flex;
-  align-items: center;
-  width: 100%;
-  min-width: var(--game-width);
   flex-direction: column;
-  padding: 20px 50px;
-  position: relative;
+  justify-content: center;
+  align-items: center;
 }
-header{
-  height: 10%;
+
+header {
+  font-size: calc(5vh);
+  color: var(--highlight-color);
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 20px;
+  text-align: center;
+  width: 100%;
 }
-#sign-up{
-  position: absolute;
-  top:15px;
-  right: 15px;
-}
-h1{
+
+footer {
+  height: var(--top-bottom-height);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: var(--color);
   font-size: 2.5rem;
-  /* text-align: center; */
 }
-li, p{
-  color: var(--color);
-}
-main-menu{
-  /* background-color: pink; */
+
+main-menu {
+  width: var(--game-width);
+  height: var(--game-height);
   position: relative;
   display: flex;
-  height: var(--game-height);  
-  width: var(--game-width);
-  font-size: 2rem;
+  justify-content: space-between; /* Ensure space between left and right menus */
+  background-color: #fff;
 }
 
-#main-frame{
-  height: var(--game-height);  
-  width: var(--game-width);
+#gameCanvas {
+  width: 100%;
+  height: 100%;
+  background-color: #000;
 }
 
-#gameCanvas{
-  position: absolute;
-  border: 6px solid var(--color);
-  height: inherit;
-  width: inherit;
-}
-left-menu, right-menu{
+left-menu, right-menu {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between; /* Align the buttons to the top */
   list-style-type: none;
   height: 100%;
-  width: 50%;
-  /* border: 2px solid orange; */
+  position: absolute; /* Ensure they are positioned absolutely within the main menu */
+  top: 0;
 }
-left-menu{
-  position:relative;
+
+left-menu {
+  width: 50%; /* Make it a percentage of the menu area */
+  left: 0; /* Position the left menu on the left side */
 }
-right-menu{
-  align-items: end;
+
+right-menu {
+  width: 50%; /* Make it a percentage of the menu area */
+  right: 0; /* Position the right menu on the right side */
+  text-align: right;
+  padding-right: 2rem; /* Add margin from the right */
 }
-left-menu .menu-option{
-  padding-left: 40px;
+
+.menu-option button {
+  all: unset;
+  display: block;
+  width: 100%;
+  font-size: var(--font-size); /* Adjust font size dynamically based on viewport width */
+  text-align: left; /* Align text to the left for left-menu */
+  background-color: transparent; /* Ensure the background is transparent */
+  cursor: pointer; /* Add cursor pointer for better UX */
+  padding: 1rem; /* Adjust padding to ensure it covers the line */
 }
-right-menu .menu-option{
-  z-index: 22;
-  padding-right: 40px;
-}
-.menu-option{
+
+.menu-option {
   display: block;
   text-decoration: none;
-  height: 50px;
-  line-height: 50px;
-}
-button{
-  all: unset;
+  font-size: var(--font-size); /* Adjust font size dynamically based on viewport width */
   color: var(--color);
-  background-color: var(--background-color);
+  border-radius: 5px;
+  margin: 0.5rem 0;
 }
-left-menu .menu-option:hover{
-  padding-left: 20px;
-  border-left: 11px solid var(--color);
+
+#right-menu-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden; /* Hide any overflow content */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Align content to the left */
+  justify-content: flex-start; /* Align content to the top */
+  text-align: right;
+  padding-right: 2rem; /* Add margin from the right */
+  padding: 10px; /* Add padding for better spacing */
 }
-right-menu .menu-option:hover{
-  /* background-color: red; */
-  padding-right: 20px;
-  border-right: 11px solid var(--color);
+
+right-menu .menu-option button {
+  text-align: right; /* Align text to the right for right-menu */
+
 }
-vertical-line{
-  position:absolute;
-  border-left: 6px dotted var(--color);
-  height: 90%;
-  right: -5px;
-  top: 5%;
+
+.menu-option:hover {
+  color: #fff;
+}
+
+.paddle {
+  position: absolute;
+  width: 10px;
+  background-color: white;
+}
+
+
+@media (max-height: 720px) {
+  :root {
+    --top-bottom-height: 0vh;
+    --game-height: 720px;
+    --game-width: 1280px;
+    --font-size: 20px;
+  }
+
+  /* body {
+    height: 720px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  } */
+
+  header, footer {
+    display: none; /* Hide header and footer */
+  }
+
+  /* main-menu {
+    width: 1280px;
+    height: 720px;
+  }
+
+  #gameCanvas {
+    height: 1280px;
+    width: 720px;
+  } */
 }
