colors and buttons match figma design

--- a/frontend/styles/login.css
+++ b/frontend/styles/login.css
@@ -1,11 +1,12 @@
-login-button{
+#login-button{
     position: absolute;
     top: 20px;
     right: 30px;
+    background-color: #FFCB13;
 }
 login-modal{
     display: none;
-    background-color: orange;
+    background-color: #FFCB13;
     position: fixed;
     z-index: 4;
     left: 10px;
@@ -15,6 +16,7 @@ login-modal{
     margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+	border-radius: 12px;;
 }
 
 .modal-content{
@@ -32,7 +34,8 @@ login-modal{
     width: 50%;
 }
 .modal-content form input{
-    line-height: 2.5rem;
+    line-height: 4rem;
+	font-size: 2rem;
 }
 .modal-content form .form-text{
     font-size: 1rem;
@@ -49,12 +52,32 @@ div .button-align{
     align-items: center;
     justify-content: center;
 }
-#close-button{
-    position: absolute;
-    top: 5px;
-    right: 5px;
+
+button[type=submit]
+{
+	background-color: black;
 }
-#signin-button{
+
+#close-button{
+	font-family: 'Press Start 2P';
+    position: absolute;
+    top: 20px;
+    right: 20px;
+	color: white;
+	border: 1px solid white;
+	border-radius: 5px;
+	font-size: 1.5rem;
+	display: flex;
+	justify-content: center;
+	align-self: center;
+	padding: 0;
+}
+#close-button div{
+	/* border: 2px solid red; */
+	padding: 0px 7px;
+	padding-left: 9px;
+}
+#signin-button, #register-button{
     font-size: 2rem;
 }
 #fortyAuth-button{
