--- a/frontend/styles/login.css
+++ b/frontend/styles/login.css
@@ -13,10 +13,11 @@ login-modal{
     right: 10px;
     width: 70%;
     height: 80%;
+    min-height: 800px;
     margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-	border-radius: 12px;;
+	border-radius: 12px;
 }
 
 .modal-content{
