--- a/frontend/styles/game/game.css
+++ b/frontend/styles/game/game.css
@@ -1,5 +1,5 @@
 body {
-    background: gray;
+    /* background: gray; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,7 +8,7 @@ body {
     flex-direction: column;
 }
 canvas {
-    border: 1px solid white;
+    border: 0px solid white;
 }
 
 h1 {
@@ -28,7 +28,7 @@ h1 {
     position: absolute;
     width: 80vh;
     height: 80vh;
-    background: rgba(0, 0, 0, 1);
+    /* background: rgba(0, 0, 0, 1); */
     color: white;
     display: flex;
     flex-direction: column;
