--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -19,7 +19,7 @@
 
     /* Background Colors */
     --background-login: #FFCB13;
-    --background-dark: #343a40;
+    /* --background-dark: #343a40; */
 
     /* FONT */
     --font-primary: 'Puritan', sans-serif;
