added boxes to enter verification code for mfa

--- a/frontend/styles/auth-dialog.css
+++ b/frontend/styles/auth-dialog.css
@@ -126,6 +126,11 @@ input {
     width: 100%;
 }
 
+.otp {
+	text-align: center;
+	width: 100%;
+}
+
 .error-message {
     color: red;
     font-size: 0.9rem;
@@ -135,3 +140,17 @@ input {
     visibility: hidden; /* Hidden by default, made visible when an error occurs */
 }
 
+.otp-input-container {
+	display: flex;
+	justify-content: center;
+	gap: 10px;
+}
+
+.otp-box {
+	width: 40px;
+	height: 40px;
+	text-align: center;
+	font-size: 18px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+}
