--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -282,12 +282,27 @@ auth-dialog {
 }
 
 #login-profile-pic{
-  width: 50px;
   height: 50px;
+  width: auto;
+  margin-right: 10px;
 }
 
 .orange-button {
   position: absolute;
+  right: 100px;
+  top: 30px;
+  background: var(--background-yellow);
+  color: black;
+  padding: 10px;
+  border-radius: 8px;
+  font-size: 20px;
+}
+
+.user-display{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   right: 100px;
   top: 30px;
   background: var(--background-yellow);
