also updates Account Profile Picture

--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -281,12 +281,6 @@ auth-dialog {
     z-index: 100;
 }
 
-#login-profile-pic{
-  height: 50px;
-  width: auto;
-  margin-right: 10px;
-}
-
 .orange-button {
   position: absolute;
   right: 100px;
@@ -302,14 +296,23 @@ auth-dialog {
   position: absolute;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  gap: 30px;
   right: 100px;
   top: 30px;
   background: var(--background-yellow);
   color: black;
-  padding: 10px;
+  padding: 15px 15px;
   border-radius: 8px;
   font-size: 20px;
+}
+
+.user-display img{
+  height: 70px;
+  width: 70px;
+  border-radius: 50%; /* This makes the image a circle */
+  object-fit: cover; /* Ensures the image covers the area without distortion */
+  display: block; /* Optional: Removes inline-block spacing */
 }
 
 /* Media queries */
