--- a/frontend/styles/dialog.css
+++ b/frontend/styles/dialog.css
@@ -31,6 +31,42 @@
 	box-sizing: border-box;
 }
 
+/*SUPER MESSY I KNOW - ONLY DIFFERENCE IS BIGGER DIMENSIONS -- DONT HAVE TIME TO IMPLEMENT BETTER SOLUTION
+ THIS IS USED ON GAME MENU DIALOG
+*/
+.overlay2 {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	z-index: 1000;
+}
+
+.dialog2 {
+	padding: 20px;
+	border-radius: 15px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 50%;
+	max-width: 600px;
+	height: 100%;
+	max-height: 600px;
+	min-width: 400px;
+	min-height: 400px;
+	background: var(--background-yellow);
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+	text-align: center;
+	font-size: 1rem;
+	color: #333;
+	box-sizing: border-box;
+}
+
 button {
 	all: unset;
 }
@@ -226,4 +262,49 @@ input {
 .disclaimer {
 	font-size: 0.4rem;
 	text-align: right;
+}
+
+.round-heading {
+	text-align: left;
+	font-weight: bold;
+	margin-top: 10px;
+}
+.match-box {
+	background-color: #f0f0f0;
+	margin: 5px 0;
+	padding: 5px;
+	border-radius: 5px;
+}
+.match {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: monospace; /* Monospace font for consistent character widths */
+}
+.player-name {
+	width: 110px;
+	text-align: center;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+.score {
+	width: 40px;
+	text-align: center;
+}
+.vs {
+	width: 30px;
+	text-align: center;
+}
+.winner {
+	color: green;
+	font-weight: bold;
+}
+.loser {
+	color: red;
+}
+.tournament-standings {
+	margin-top: 10px;
+	max-height: 500px;
+	overflow-y: auto;
 }
