2fa button displays 2fa input view

--- a/frontend/styles/account.css
+++ b/frontend/styles/account.css
@@ -58,6 +58,8 @@
 
 
 .orange-2FA-button{
+    all: unset;
+    pointer-events: auto;
     display: block;
 	background: var(--background-yellow);
 	color: black;
