Added field to update display name

--- a/frontend/styles/account.css
+++ b/frontend/styles/account.css
@@ -131,6 +131,24 @@
     gap: 10px;
 }
 
+.username-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+#username-input {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 5px;
+    font-size: 1rem;
+}
+
+#username-edit-buttons {
+    display: inline-flex;
+    gap: 5px;
+}
+
 .match {
     display: flex;
     justify-content: space-between;
